--- a/src/main/resources/com/example/demo1/beautiHomePage.css
+++ b/src/main/resources/com/example/demo1/beautiHomePage.css
@@ -57,3 +57,7 @@
 .anchor-pane:hover {
     -fx-background-color: linear-gradient(to top left, #ffffff, #c4ffc6);
 }
+.anchor2-pane {
+    -fx-border-radius: 10px;
+    -fx-border-color: #449e5e;
+}
