--- a/src/main/resources/com/example/demo1/HomePage.fxml
+++ b/src/main/resources/com/example/demo1/HomePage.fxml
@@ -316,6 +316,7 @@
          <children>
             <Label layoutX="43.0" layoutY="12.0" text="Exchange " />
             <Label fx:id="timeLabel" layoutX="123.0" layoutY="12.0" prefHeight="18.0" prefWidth="61.0" />
+            <Label fx:id="MarketSituLabel" layoutX="747.0" layoutY="12.0" prefHeight="18.0" prefWidth="287.0" text="Market Is Open_You Can Set An Exchange Order" textFill="GREEN" />
          </children>
       </AnchorPane>
       <AnchorPane fx:id="HomePageAnchor" layoutX="186.0" layoutY="40.0" prefHeight="700.0" prefWidth="869.0">
